feat: :sparkles: update db-endpoints & openapi-docs (step 04 & 05)
